--- a/style.css
+++ b/style.css
@@ -1,39 +1,76 @@
-        @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&family=Roboto:wght@300;400&display=swap');
-        /*--------------FONT-------------*/
-        
-        html,
-        body {
-            font-family: 'Roboto', 'Noto Sans', sans-serif;
-        }
-        /*--------------NAV-------------*/
-        
-        #nav-bar {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            background-color: black;
-        }
-        
-        #start {}
-        
-        #logo {
-            height: 50px;
-            cursor: pointer;
-        }
-        
-        #site-search {
-            max-width: 100%;
-            width: 100%;
-        }
-        
-        #profile {
-            object-fit: cover;
-            height: 35px;
-            width: 35px;
-            border-radius: 50%;
-        }
-        
-        .icon {
-            color: white;
-            font-size: 20px;
-        }
+            @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&family=Roboto:wght@300;400&display=swap');
+            /*--------------FONT-------------*/
+            
+            html,
+            body {
+                font-family: 'Roboto', 'Noto Sans', sans-serif;
+            }
+            /*--------------NAV-------------*/
+            
+            #nav-bar {
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                align-items: center;
+                background-color: black;
+            }
+            
+            #menu {
+                padding: 15px;
+            }
+            
+            #logo {
+                height: 50px;
+                cursor: pointer;
+            }
+            
+            #site-search {
+                max-width: 100%;
+                width: 500px;
+                line-height: 24px;
+                height: 30px;
+                outline: none;
+                padding: 10px;
+                font-size: 15px;
+                border-radius: 3px;
+                border: 1px solid grey;
+                background-color: rgb(46, 45, 45);
+                margin: 6px;
+            }
+            
+            button {
+                position: relative;
+                top: 3px;
+                right: 12px;
+                width: 70px;
+                padding: 4px;
+                border: none;
+                border-radius: 3px;
+                background-color: grey;
+                cursor: pointer;
+            }
+            
+            .icon {
+                color: white;
+                font-size: 20px;
+            }
+            
+            #search-icon {
+                color: rgb(70, 61, 61);
+            }
+            
+            #search-icon:hover {
+                color: white;
+            }
+            
+            #profile {
+                object-fit: cover;
+                height: 35px;
+                width: 35px;
+                border-radius: 50%;
+            }
+            
+            .end-links {
+                padding: 12px 10px 15px 20px;
+                display: inline-block;
+            }
