--- a/style.css
+++ b/style.css
@@ -5,14 +5,17 @@
             body {
                 font-family: 'Roboto', 'Noto Sans', sans-serif;
             }
-            /*--------------NAV-------------*/
+            /*--------------NAVIGATION-------------*/
             
             #nav-bar {
                 display: flex;
                 flex-direction: row;
                 justify-content: space-between;
                 align-items: center;
+                position: fixed;
                 background-color: black;
+                z-index: 999;
+                width: 100%;
             }
             
             #menu {
@@ -74,3 +77,10 @@
                 padding: 12px 10px 15px 20px;
                 display: inline-block;
             }
+            /*--------------VIDEO-------------*/
+            
+            #emb-vid {
+                height: 100vh;
+                width: 100vw;
+            }
+            /*--------------GRID-------------*/
