--- a/style.css
+++ b/style.css
@@ -1,177 +1,209 @@
-        @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap');
-        /*--------------FONT-------------*/
-        
-        html,
-        body {
-            font-family: 'Roboto', sans-serif;
-        }
-        /*--------------NAVIGATION-------------*/
-        
-        #nav-bar {
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;
-            align-items: center;
-            position: fixed;
-            background-color: black;
-            z-index: 999;
-            width: 100%;
-        }
-        
-        #menu {
-            padding: 15px;
-        }
-        
-        #logo {
-            height: 50px;
-            cursor: pointer;
-        }
-        
-        #site-search {
-            max-width: 100%;
-            width: 500px;
-            line-height: 24px;
-            height: 30px;
-            outline: none;
-            padding: 10px;
-            font-size: 15px;
-            border-radius: 3px;
-            border: 1px solid grey;
-            background-color: rgb(46, 45, 45);
-            margin: 6px;
-        }
-        
-        button {
-            position: relative;
-            top: 3px;
-            right: 12px;
-            width: 70px;
-            padding: 4px;
-            border: none;
-            border-radius: 3px;
-            background-color: grey;
-            cursor: pointer;
-        }
-        
-        .icon {
-            color: white;
-            font-size: 20px;
-        }
-        
-        #search-icon {
-            color: rgb(70, 61, 61);
-        }
-        
-        #search-icon:hover {
-            color: white;
-        }
-        
-        #profile {
-            object-fit: cover;
-            height: 35px;
-            width: 35px;
-            border-radius: 50%;
-        }
-        
-        .end-links {
-            padding: 12px 10px 15px 20px;
-            display: inline-block;
-        }
-        /*--------------VIDEO-------------*/
-        
-        #emb-vid {
-            height: 100vh;
-            width: 100vw;
-        }
-        /*--------------GRID-------------*/
-        
-        #grid {
-            display: grid;
-            grid-template-columns: 2fr 1fr;
-            margin: 20px 150px;
-            padding: 0 100px 0 0;
-        }
-        /*--------------GRID-LEFT-TITLE-------------*/
-        
-        #username {
-            color: rgb(38, 95, 200);
-            font-size: 13px;
-            padding: 5px 0;
-        }
-        
-        ion-icon {
-            cursor: pointer;
-            padding-right: 5px;
-        }
-        
-        .h1-font {
-            font-size: 18px;
-            overflow-wrap: break-word;
-            padding-bottom: 15px;
-            line-height: 25px;
-        }
-        
-        #link-line {
-            display: flex;
-            color: rgb(87, 87, 94);
-            justify-content: space-between;
-        }
-        
-        .grey-font {
-            font-size: 15px;
-            padding-right: 10px;
-            color: rgb(87, 87, 94);
-        }
-        
-        .link-icons {
-            padding-right: 10px;
-            font-size: 14px;
-            font-weight: 500;
-        }
-        
-        #border {
-            border-bottom: 1px solid rgb(223, 216, 216);
-            padding-bottom: 20px;
-        }
-        
-        #thick-border {
-            position: relative;
-            top: 20px;
-            left: 280px;
-            border-bottom: 2px solid grey;
-            width: 145px;
-        }
-        /*--------------GRID-LEFT-INFO-------------*/
-        
-        #info-sect {
-            display: flex;
-            padding: 20px 0;
-        }
-        
-        #subscribe-btn {
-            float: right;
-            background-color: red;
-            padding: 10px 15px;
-            width: 20%;
-            border-radius: 0;
-            color: white;
-        }
-        
-        .indent-sect {
-            padding: 5px 15px;
-        }
-        
-        #subscribe-padding {
-            padding: 0 0 15px 0;
-            font-size: 14px;
-        }
-        
-        .para {
-            font-size: 14px;
-            line-height: 23px;
-            padding: 10px 0;
-        }
-        
-        #show-margin {
-            margin: 0 0-20px 0;
-        }
+            @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap');
+            /*--------------FONT-------------*/
+            
+            html,
+            body {
+                font-family: 'Roboto', sans-serif;
+            }
+            /*--------------NAVIGATION-------------*/
+            
+            #nav-bar {
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                align-items: center;
+                position: fixed;
+                background-color: black;
+                z-index: 999;
+                width: 100%;
+            }
+            
+            #menu {
+                padding: 15px;
+            }
+            
+            #logo {
+                height: 50px;
+                cursor: pointer;
+            }
+            
+            #site-search {
+                max-width: 100%;
+                width: 500px;
+                line-height: 24px;
+                height: 30px;
+                outline: none;
+                padding: 10px;
+                font-size: 15px;
+                border-radius: 3px;
+                border: 1px solid grey;
+                background-color: rgb(46, 45, 45);
+                margin: 6px;
+            }
+            
+            button {
+                position: relative;
+                top: 3px;
+                right: 12px;
+                width: 70px;
+                padding: 4px;
+                border: none;
+                border-radius: 3px;
+                background-color: grey;
+                cursor: pointer;
+            }
+            
+            .icon {
+                color: white;
+                font-size: 20px;
+            }
+            
+            #search-icon {
+                color: rgb(70, 61, 61);
+            }
+            
+            #search-icon:hover {
+                color: white;
+            }
+            
+            #profile {
+                object-fit: cover;
+                height: 35px;
+                width: 35px;
+                border-radius: 50%;
+            }
+            
+            .end-links {
+                padding: 12px 10px 15px 20px;
+                display: inline-block;
+            }
+            /*--------------VIDEO-------------*/
+            
+            #emb-vid {
+                height: 100vh;
+                width: 100vw;
+            }
+            /*--------------GRID-------------*/
+            
+            #grid {
+                display: grid;
+                grid-template-columns: 2fr 1fr;
+                margin: 20px 150px;
+                padding: 0 100px 0 0;
+            }
+            /*--------------GRID-LEFT-TITLE-------------*/
+            
+            #username {
+                color: rgb(38, 95, 200);
+                font-size: 13px;
+                padding: 5px 0;
+            }
+            
+            ion-icon {
+                cursor: pointer;
+                padding-right: 5px;
+            }
+            
+            .h1-font {
+                font-size: 18px;
+                overflow-wrap: break-word;
+                padding-bottom: 15px;
+                line-height: 25px;
+            }
+            
+            #link-line {
+                display: flex;
+                color: rgb(87, 87, 94);
+                justify-content: space-between;
+            }
+            
+            .grey-font {
+                font-size: 15px;
+                padding-right: 10px;
+                color: rgb(87, 87, 94);
+            }
+            
+            .link-icons {
+                padding-right: 10px;
+                font-size: 14px;
+                font-weight: 500;
+            }
+            
+            #border {
+                border-bottom: 1px solid rgb(223, 216, 216);
+                padding-bottom: 20px;
+            }
+            
+            #thick-border {
+                position: relative;
+                top: 20px;
+                left: 280px;
+                border-bottom: 2px solid grey;
+                width: 145px;
+            }
+            /*--------------GRID-LEFT-INFO-------------*/
+            
+            #info-sect {
+                display: flex;
+                padding: 20px 0;
+            }
+            
+            #subscribe-btn {
+                float: right;
+                background-color: red;
+                padding: 10px 15px;
+                width: 20%;
+                border-radius: 0;
+                color: white;
+            }
+            
+            .indent-sect {
+                padding: 5px 15px;
+            }
+            
+            #subscribe-padding {
+                padding: 0 0 15px 0;
+                font-size: 14px;
+            }
+            
+            .para {
+                font-size: 14px;
+                line-height: 23px;
+                padding: 10px 0;
+            }
+            
+            #show-margin {
+                margin: 0 0-20px 0;
+            }
+            /*--------------COMMENTS-SECT-------------*/
+            
+            #sort-comment {
+                display: flex;
+                padding: 30px 0;
+            }
+            
+            #space-btw {
+                padding: 0 25px;
+            }
+            
+            #profile-comment-sect {
+                object-fit: cover;
+                height: 45px;
+                width: 45px;
+                border-radius: 50%;
+            }
+            
+            #input-comment {
+                font-family: 'robot', sans-serif;
+                font-size: 14px;
+                position: relative;
+                bottom: 45px;
+                left: 50px;
+                margin: 0 10px;
+                padding: 10px 0;
+                max-width: 100%;
+                width: 90%;
+                border: none;
+                border-bottom: 1px solid rgb(223, 216, 216);
+                outline-width: 0;
+            }
