added right grid and slider

--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@
                     #grid {
                         display: grid;
                         grid-template-columns: 2fr 1fr;
-                        margin: 20px 150px;
+                        margin: 20px 80px 0 150px;
                     }
                     /*--------------GRID-LEFT-TITLE-------------*/
                     
@@ -239,7 +239,7 @@
                     .indent-sect-2 {
                         position: relative;
                         bottom: 50px;
-                        margin: 0 50px;
+                        margin: -10px 50px;
                         padding: 0 15px;
                     }
                     
@@ -315,3 +315,77 @@
                     .space {
                         padding: 0 10px;
                     }
+                    /*--------------GRID-RIGHT-TITLE-------------*/
+                    
+                    #grid-title {
+                        display: flex;
+                        justify-content: space-between;
+                    }
+                    
+                    #end {
+                        display: flex;
+                    }
+                    /*---------slider-----------*/
+                    
+                    .switch {
+                        position: relative;
+                        display: inline-block;
+                        width: 60px;
+                        height: 34px;
+                    }
+                    /* Hide default HTML checkbox */
+                    
+                    .switch input {
+                        opacity: 0;
+                        width: 0;
+                        height: 0;
+                    }
+                    /* The slider */
+                    
+                    .slider {
+                        position: absolute;
+                        cursor: pointer;
+                        top: 0;
+                        left: 0;
+                        right: 0;
+                        bottom: 0;
+                        background-color: #ccc;
+                        -webkit-transition: .4s;
+                        transition: .4s;
+                    }
+                    
+                    .slider:before {
+                        position: absolute;
+                        content: "";
+                        height: 26px;
+                        width: 26px;
+                        left: 4px;
+                        bottom: 4px;
+                        background-color: white;
+                        -webkit-transition: .4s;
+                        transition: .4s;
+                    }
+                    
+                    input:checked+.slider {
+                        background-color: #2196F3;
+                    }
+                    
+                    input:focus+.slider {
+                        box-shadow: 0 0 1px #2196F3;
+                    }
+                    
+                    input:checked+.slider:before {
+                        -webkit-transform: translateX(26px);
+                        -ms-transform: translateX(26px);
+                        transform: translateX(26px);
+                    }
+                    /* Rounded sliders */
+                    
+                    .slider.round {
+                        border-radius: 34px;
+                    }
+                    
+                    .slider.round:before {
+                        border-radius: 50%;
+                    }
+                    /*--------------GRID-RIGHT-VIDS-------------*/
