--- a/style.css
+++ b/style.css
@@ -411,21 +411,25 @@
     }
     /*--------------GRID-RIGHT-VIDS-FLEX-------------*/
     
+    .right {
+        display: inline-flex;
+        flex-direction: column;
+    }
+    
     .video-container {
         max-width: 800px;
-        padding: 10px;
         display: flex;
-        border-bottom: 1px solid rgb(223, 216, 216);
         width: 100%;
+        border-bottom: 1px solid rgb(223, 216, 216);
     }
     
     .video {
-        flex: 0 0 45%;
+        flex: 0 0 50%;
     }
     
     .video-size {
         width: 100%;
-        height: 65%;
+        height: 80%;
     }
     
     .vid-title {
