--- a/style.css
+++ b/style.css
@@ -57,12 +57,18 @@ button {
 }
 
 .icon {
-    color: white;
+    color: rgb(255, 255, 255);
     font-size: 20px;
 }
 
+.nav-icon-end {
+    color: rgb(255, 255, 255);
+    font-size: 20px;
+    padding-top: 10px;
+}
+
 #search-icon {
-    color: rgb(70, 61, 61);
+    color: rgb(199, 189, 189);
 }
 
 #search-icon:hover {
@@ -207,7 +213,7 @@ ion-icon {
 }
 
 #show-margin {
-    margin: 0 0 -20px 0;
+    margin: -30px 0 -20px 0;
 }
 
 
